--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "prop-types": "^15.5.10",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "react-redux": "^5.0.5",
     "react-router-dom": "^4.1.1",
+    "react-router-redux": "^5.0.0-alpha.6",
+    "redux": "^3.7.1",
+    "redux-thunk": "^2.2.0",
     "styled-components": "^2.1.1"
   },
   "devDependencies": {
